--- a/estilo.css
+++ b/estilo.css
@@ -13,4 +13,10 @@ body {
     border-radius: 25px;
     margin-top: 50%;
     margin-bottom: 50%;
+    width: 500px;
+    height: 0px;
+    gap: 10px;
+    margin-left: 650px;
+    margin-top: 400px;
+    padding: 30px;
 }
